# turingdb-kgsearch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_jupyter.sh
notebooks/: AI_governance_control_mapping.ipynb  michael_data.ipynb  quickstart.ipynb  sec-8k-raw-text-filings-2024.ipynb  software_dependencies.ipynb
notebooks/data/AI_governance_control_mapping/: ai_gov_control_mappings_full.csv
notebooks/data/AI_governance_control_mapping/embeddings/: embeddings_context_enriched_heavy.npz  embeddings_node2vec.npz  embeddings_node_only.npz  embeddings_sparse.npz  embeddings_sparse_sparse.npz
notebooks/data/sec_8k_raw_text_filings_2024/embeddings/: embeddings_sparse.npz  embeddings_sparse_sparse.npz
notebooks/data/software_dependencies/: software_dependencies.gml
notebooks/draft/: software_dependencies.ipynb
src/: main.py
src/turingdb_graphrag/: embeddings.py  explain_results.py  ranking.py  statistics.py  visualization.py  workflow.py
src/turingdb_kgsearch/: embeddings.py  llm.py  save_embeddings.py  search.py  subgraph.py  visualization.py  workflow.py
