[project]
name = "turingdb-kgsearch"
version = "0.1.0"
description = "Vector search and graph RAG utilities using TuringDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.70.0",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.7",
    "mistralai>=1.9.11",
    "networkx>=3.5",
    "node2vec>=0.4.3",
    "numpy>=2.3.3",
    "openai>=2.4.0",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "pyvis>=0.3.2",
    "ruff>=0.14.3",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "transformers==4.56.0",
    "turingdb",
    "turingdb-examples",
]

keywords = ["turingdb", "examples", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

# Tool configurations
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--cov=src",
    "--cov=examples",
    "--cov-report=html",
    "--cov-report=term-missing"
]

[tool.uv.sources]
turingdb = { path = "../turingdb-sdk-python", editable = true }
turingdb-examples = { path = "../turingdb-examples" }
